# corehard2019-cmake

./: test.cmake  test_driver.cmake
01_initial/: CMakeLists.txt  test.cmake
01_initial/Bells/: CMakeLists.txt
01_initial/MonsterBot/: CMakeLists.txt  MonsterBot.cpp
01_initial/Whistles/: CMakeLists.txt
02_commonGroup/: CMakeLists.txt  test.cmake
02_commonGroup/GitHubApi/: CMakeLists.txt
03_subprojects/: test.cmake
03_subprojects/Common/: CMakeLists.txt
03_subprojects/GitHubApi/: CMakeLists.txt
04_aliasTargets/: test.cmake
04_aliasTargets/Common/Bells/: CMakeLists.txt
04_aliasTargets/Common/Whistles/: CMakeLists.txt
04_aliasTargets/GitHubApi/: CMakeLists.txt
05_install/: CMakeLists.txt  test.cmake
05_install/Common/Bells/: CMakeLists.txt
05_install/Common/Whistles/: CMakeLists.txt
05_install/GitHubApi/: CMakeLists.txt
06_commonPackage/: test.cmake
06_commonPackage/Common/: CMakeLists.txt
06_commonPackage/Common/Whistles/: Whistle.cpp
06_commonPackage/GitHubApi/: CMakeLists.txt
07_gitHubApiPackage/: CMakeLists.txt  test.cmake
07_gitHubApiPackage/Common/: CMakeLists.txt
07_gitHubApiPackage/Common/Whistles/: CMakeLists.txt
07_gitHubApiPackage/GitHubApi/: CMakeLists.txt  Config.cmake  GitHubApi.cpp
08_final/: test.cmake
08_final/Common/: CMakeLists.txt
08_final/GitHubApi/: CMakeLists.txt
08_final/MonsterBot/: CMakeLists.txt
09_finalRemote/: CMakeLists.txt
09_finalRemote/CMakeCommon/: MyProject.cmake
09_finalRemote/Common/: CMakeLists.txt
09_finalRemote/Common/Bells/: Bell.cpp  CMakeLists.txt
09_finalRemote/GitHubApi/: CMakeLists.txt  Config.cmake
